# music_genre_classification

./: .env  .env.example  .gitignore  README.md  best_model.pth  best_model_attention.pth  main.py  pyproject.toml  try.py
configs/: config.yaml
data/: label_map.json  stats.json
data_pipeline/: main.py  pyproject.toml
data_pipeline/src/: __init__.py
data_pipeline/tests/: test_pipeline.py
model_pipeline/: predict.py
src/: __init__.py
src/features/: __init__.py  audio_transforms.py
src/ingestion/: __init__.py  dataset_builder.py  metadata.py  verify.py
src/utils/: __init__.py  helpers.py
tests/: test_pipeline.py
