[build-system]
# Sử dụng setuptools mới nhất hỗ trợ hoàn toàn PEP 621 và editable installs nhanh hơn
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "music_genre_classification"
version = "1.0.0"
description = "AI Music Genre Classification System DSP and MLOps practices."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["audio", "deep-learning", "music-classification", "pytorch", "polars"]

dependencies = [
    "torch>=2.10.0",            # Tối ưu hóa cho CUDA 13.x và kiến trúc H200/B200
    "torchaudio>=2.10.0",       # Hỗ trợ TorchCodec cho việc decode audio siêu tốc trên GPU
    "polars>=1.38.1",           # Bản ổn định 2026 với Lazy API và tối ưu hóa Multi-core Rust
    "datasets>=4.5.0",          # Tối ưu hóa zero-copy cho audio datasets cực lớn
    "huggingface_hub[cli]>=1.4.1",
    "hydra-core>=1.3.2",        # Quản lý cấu hình dạng Module
    "omegaconf>=2.3.0",          # Explicit: structured config (transitive via hydra, nhưng khai báo rõ)
    "scikit-learn>=1.8.0",      # Cập nhật thuật toán chia tập StratifiedGroupKFold
    "pyarrow>=23.0.0",          # Backend cho Polars và Datasets (Arrow IPC 2026)
    "numpy>=2.4.2",             # Numpy 2.x với hiệu suất vectorization vượt trội
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.0",
    "av>=16.0.0",               # PyAV for FFmpeg-based audio loading
    "fsspec==2025.10.0",        # Quan trọng để quản lý file hệ thống trong Hugging Face
    "s3fs==2025.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.0",              # Linter/Formatter thống nhất (Rust-based)
    "mypy>=1.14.0",             # Kiểm tra kiểu dữ liệu tĩnh nghiêm ngặt
    "jupyterlab>=4.3.0",
    "wandb>=0.19.0",            # Experiment tracking (Weights & Biases)
    "ipywidgets>=8.1.0"         # Hiển thị progress bar trong Notebook
]

# --- Cấu hình Ruff ---
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# E: Error, F: Pyflakes, I: Isort, N: Naming, W: Warning, PL: Pylint, UP: Pyupgrade
select = ["E", "F", "I", "N", "W", "PL", "UP"]
ignore = ["PLR0913"]            # Bỏ qua cảnh báo quá nhiều tham số trong hàm nếu cần thiết cho Model init

[tool.ruff.lint.isort]
known-first-party = ["src"]     # Nhóm các import nội bộ của dự án

# --- Cấu hình Mypy (Strict Typing) ---
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true    # Ép buộc định nghĩa type cho hàm
ignore_missing_imports = true   # Bỏ qua lỗi nếu thư viện bên thứ 3 không có stub

# --- Cấu hình Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"